--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 i.src = "./img/red.png"
             }
             if (valor == 5){
-                i.src = "./img/yellow.png"
+                i.src = "./img/amarelo.png"
             }
             if (valor == 6){
                 i.src = "./img/orange.png"
